syntax = "proto3";

option csharp_namespace = "ToDoListManager";

service ToDoListManagerGrpc {
    rpc GetAllQuestions (GetAllRequest) returns (GrpcResponse);
}

message GetAllRequest {}

message GrpcQuestionModel {
    int32 id = 1;
    string title = 2;
    string description = 3;
}

message GrpcResponse {
    repeated GrpcQuestionModel question = 1;
}